build/apps/longhorn/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Longhorn Dashboard
    gethomepage.dev/group: Operations
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    gethomepage.dev/pod-selector: ""
  labels:
    app.kubernetes.io/name: longhorn-dashboard
spec:
  rules:
  - host: longhorn.graytonward.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80
